# pythonProject

./: README.md  calc.py  example.py  file1.py  file2.py  main.py  practice_for_tests.py  pyproject.toml  shopping_list.txt  students.txt  test.txt
data/: log.txt
src/: main.py  task_1.py  task_2.py  task_3.py  task_4.py
tests/: conftest.py  test_calc.py  test_main.py
untils/: add.py  hello.py
